Code cleanup:  * Added/corrected comments  * Updated to java language 25    * Replaced unused attributes with '_'    * Use list.getFirst